--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
                         <p class="category">Backend development</p>
                     </div>
                     <div class="content">
-
+                        <app-day-chart></app-day-chart>
                     </div>
                 </div>
             </div>
