--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,18 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4">
+            <div >
                 <div class="card">
                     <div class="header">
-                        <h4 class="title">Tasks</h4>
-                        <p class="category">Backend development</p>
+                        <h4 class="title">Tagesansicht</h4>
+                        <!--<p class="category">Backend development</p>-->
                     </div>
                     <div class="content">
                         <app-day-chart></app-day-chart>
                     </div>
                 </div>
             </div>
-            <div class="col-md-8">
+            <!--<div class="col-md-8">
                 <div class="card">
                     <div class="header">
                         <h4 class="title">Tasks</h4>
@@ -22,9 +22,9 @@
 
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
-        <div class="row">
+        <!--<div class="row">
             <div class="col-md-6">
 
             </div>
@@ -165,6 +165,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
