--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -10,10 +10,10 @@
     </div>
     <ul class="nav responsive-nav">
         <li *ngIf="isMobileMenu()">
-            <a class="dropdown-toggle" data-toggle="dropdown">
+            <!--<a class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-dashboard"></i>
                 <p class="hidden-lg hidden-md">Dashboard</p>
-            </a>
+            </a>-->
         </li>
 
         <li *ngIf="isMobileMenu()">
