--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a (click)="onLogout()">
                         Log out
                     </a>
                 </li>
