--- a/src/app/full-chart/full-chart.component.html
+++ b/src/app/full-chart/full-chart.component.html
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-md-9">
-        <p-chart #chart type="bar"
+        <p-chart height="65vh" #chart type="bar"
                  [data]="basicData"
                  [options]="basicOptions">
         </p-chart>
