--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -13,13 +13,13 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#">
+                    <a href="#/user">
                         Account
                     </a>
                 </li>
 
-                <li>
-                    <a (click)="onLogout()">
+                <li style="cursor: pointer;" (click)="onLogout()">
+                    <a >
                         Log out
                     </a>
                 </li>
