--- a/src/app/day-spontan-chart/day-spontan-chart.component.html
+++ b/src/app/day-spontan-chart/day-spontan-chart.component.html
@@ -1,6 +1,9 @@
+<p-toast position="center" key="tc"></p-toast>
 <div class="formgroup-inline" xmlns:p="http://www.w3.org/1999/xhtml" xmlns:p="http://www.w3.org/1999/xhtml">
     <label for="dayDatePicker" >Tag:</label>
     <p-calendar [readonlyInput]="true" style="margin-left: 5px;" dateFormat="dd.mm.yy" id="dayDatePicker" [(ngModel)]="selectedDate" [showIcon]="true" inputId="icon"></p-calendar>
+    <p-button pTooltip="Voriger Tag" style="margin-left: 5px;" (click)="goToLastDay()" icon="pi pi-caret-left"></p-button>
+    <p-button pTooltip="Nächster Tag" style="margin-left: 5px;" (click)="goToNextDay()" icon="pi pi-caret-right"></p-button>
     <p-button style="margin-left: 5px;" (click)="onRefresh(chart)" icon="pi pi-refresh"></p-button>
 </div>
 
